kubernetes/apps/projet-etude-app-demo/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: projet-etude-app-demo
  labels:
    app.kubernetes.io/name: projet-etude-app-demo
    app.kubernetes.io/component: api
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: projet-etude-app-demo
    app.kubernetes.io/component: api
  ports:
    - name: http
      port: 80
      targetPort: http
